# moxxmpp

./: .gitignore  .gitlint  .woodpecker.yml  CONTRIBUTING.md  README.md  analysis_options.yaml  flake.nix  melos.yaml
example/: pubspec.yaml  pubspec_overrides.yaml
example/lib/: main.dart
example/linux/flutter/: generated_plugins.cmake
example_flutter/: pubspec.yaml
example_flutter/lib/: main.dart
example_flutter/linux/flutter/: generated_plugin_registrant.cc
examples_dart/: README.md  pubspec.yaml
examples_dart/lib/: arguments.dart  socket.dart
integration_tests/: README.md  create_users.sh  prosody.cfg.lua  pubspec.yaml
integration_tests/certs/: localhost.crt  localhost.key
integration_tests/test/: component_test.dart  sasl2_test.dart
mbedsock/: CMakeLists.txt  mbedsock.c  mbedsock.def  mbedsock.h
moxxmpp/: CHANGELOG.md  README.md  pubspec.yaml
moxxmpp/example/: moxxmpp_example.dart
moxxmpp/lib/src/: connection.dart  message.dart  roster.dart  settings.dart  socket.dart  stanza.dart
moxxmpp/lib/src/managers/: attributes.dart  base.dart  data.dart  data.freezed.dart  handlers.dart
moxxmpp/test/: moxxmpp_test.dart
moxxmpp_socket/: .flutter-plugins  .flutter-plugins-dependencies  README.md  analysis_options.yaml  pubspec.yaml  pubspec_overrides.yaml
moxxmpp_socket/integration_test/: test_wrong_host.dart
moxxmpp_socket/lib/: moxxmpp_socket.dart
moxxmpp_socket/lib/src/: record.dart  rfc_2782.dart  socket.dart  ssl.dart
nix/: moxxmpp-docs.nix  pubcache.moxxmpp.nix
scripts/: lock2nix.py  pubspec2lock.py
(+26 files in other folders)
